--- a/index.html
+++ b/index.html
@@ -9,36 +9,44 @@
     <title>Jogo da Forca</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <link rel="icon" href="favicon.png">
 </head>
 
 <body>
     <header>
         <h1>JOGO DA FORCA</h1>
+
+        <nav>
+            <a href="">Restart</a>
+        </nav>
+
     </header>
     <main>
+
+
         <div id="cabeca">
             <img src="cabeça.png" alt="">
         </div>
 
 
-    <section class="corpo-cima">
-        <div id="bracod">
-            <img src="Braço Direito.png" alt="">
+        <section class="corpo-cima">
+            <div id="bracod">
+                <img src="Braço Direito.png" alt="">
+            </div>
+
+            <div id="tronco">
+                <img src="corpo.png" alt="">
+            </div>
+
+            <div id="bracoe">
+                <img src="Braço Esquerdo.png" alt="">
+            </div>
+
+        </section>
+
+        <div id="pernad">
+            <img src="Perna Esquerda.png" alt="">
         </div>
-
-        <div id="tronco">
-            <img src="corpo.png" alt="">
-        </div>
-
-        <div id="bracoe">
-            <img src="Braço Esquerdo.png" alt="">
-        </div>
-
-    </section>
-
-     <div id="pernad">
-        <img src="Perna Esquerda.png" alt="">
-     </div>
 
         <div id="pernae">
             <img src="Perna Direita.png" alt="">
@@ -47,7 +55,10 @@
 
     </main>
 
-    <section class="palavras">palavras</section>
+    <section class="palavras">Palavra com 8 letras (tema natureza):</section>
+
+    <span class="linhas">________ ________ ________ ________ ________ ________ ________ ________</span>
+
 </body>
 
 </html>
