--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 
     <section class="palavras">Palavra com 8 letras (tema natureza):</section>
 
+   <form>
+       <input type="digite" placeholder="Digite a letra/palavra!" id="palpite">
+   </form>
+
     <span class="linhas">________ ________ ________ ________ ________ ________ ________ ________</span>
 
 </body>
