--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
     <main>
 
 
-        <div id="cabeca">
+        <div id="cabeca" class="puxar">
             <img src="cabeça.png" alt="">
         </div>
 
 
         <section class="corpo-cima">
-            <div id="bracod">
+            <div id="bracod" class="puxar">
                 <img src="Braço Direito.png" alt="">
             </div>
 
-            <div id="tronco">
+            <div id="tronco"class="puxar">
                 <img src="corpo.png" alt="">
             </div>
 
-            <div id="bracoe">
+            <div id="bracoe" class="puxar">
                 <img src="Braço Esquerdo.png" alt="">
             </div>
 
         </section>
 
-        <div id="pernad">
+        <div id="pernad" class="puxar">
             <img src="Perna Esquerda.png" alt="">
         </div>
 
-        <div id="pernae">
+        <div id="pernae" class="puxar">
             <img src="Perna Direita.png" alt="">
         </div>
 
@@ -59,6 +59,7 @@
 
    <form>
        <input type="digite" placeholder="Digite a letra/palavra!" id="palpite">
+       <button id="button">Enviar</button>
    </form>
 
     <span class="linhas">________ ________ ________ ________ ________ ________ ________ ________</span>
