--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -54,16 +55,27 @@
 
 
     </main>
+ <div class="respostas">
 
+        <div class="linhas">
+                <span>________</span> 
+                <span>________</span> 
+                <span>________</span>
+                <span>________</span> 
+                <span>________</span>
+                <span>________</span> 
+                <span>________</span>
+                <span>________</span> 
+             </div>
+             
     <section class="palavras">Palavra com 8 letras (tema natureza):</section>
-
    <form>
        <input type="digite" placeholder="Digite a letra/palavra!" id="palpite">
        <button id="button">Enviar</button>
    </form>
 
-    <span class="linhas">________ ________ ________ ________ ________ ________ ________ ________</span>
 
+ </div>
 </body>
 
 </html>
